version 0.6.0
+ added run detection logic
+ improved set detection logic
+ improved melds printout
+ fixed CheaterStandardDeck "couldn't find card" bug
+ renamed value field to rank in Card
+ added rankName method (will be moved to a new class later)
+ took 's' off of the ends of the suit strings